lab1/Test/L1-A-11-10.cmm
struct rc0YvZ ;
struct qA1IIZM24xBdpjJrE umnDmor05ZU6BTdtIKWh 
;
int SAl1MXdCs3mV ( struct {
  struct Nror9Bv lKJxO ;
}) {
  float n4su9hMDjRSpXeWd , lgqBLNguLQ = xujBggBnOqt_C3 
    = _kqYUJ + dspOc5wm4g933lmzy * - gRtCHNqWgoj6Wvmoj 
    [ a4aBr5l42tp || llIhJL5x && Zh != dTHWtWUO6aV18GY0bbS 
    - T8i ( Lz8_ZMai5ivvF , e7qJ2hzNw7rzW6EfYOgs = zL 
    || y8pcfsNc6o6sUl == + Im1BbIZkMvBxrvAPz ( QdAfj8PKv2ry4Z2tg 
    = K < PVxfKNHUt [ TYGcuVc = fG7uUpXqIMNuqfoK2HfW = 
    ytI9VgSIEvIt9Vg && FMDDKF1Ul <= SYDpZ7MbahYrh - Ux34BZi9 
    * ( eBkA = NVxe7GhLslReQE >= jZz [ Fpd84cs0FZ77CEG2e 
    <= - - ! 1981046248.305222746 ] ) / - m ] ) ) / - 
    d7T38h22pDSlJw ( ) ] > ! 953409023 . ggEyK4DuwO9K64omrfX 
    ;
}
int XOJlV , iB9Emx7x [ 1776423975 ] 

;
int ;
int e4oA3 ( ) {
  int NrN4bpiwSqpn9x ;
  int oaA6uGP ;
  struct cVQnB {
    struct akfCc9mN3 Zr ;
    int GKO 
  }jmMelAxSJRkH81D ;
  int DKn7BjzYgvZuLaj ;
  w3ZyJe_eq9R4 ;
  if ( O4lcvlUZmtlVcW8s ) {
    int E7PfTuDCRgcjNiKw6x ;
  }else   ojQak4Gg ;

  if ( V3W )   if ( VmMCm ) {
    int WQ7Ku0bLhu ;
    if ( kPn7liU5 )     vk ;
else {
      if ( TDpkqJS9ZFJsxZT2 )       if ( oF2eDPgmAnV6hEGb4 
        )       g3_aq ;


      W ;
      YrCj ;
    }
  }else   while ( RyRtwxDajK )   sBGiE ;


else   if ( KtuGJiehilv )   return W2ESdym2QdcS ;


}
int lALLt32poh6ycv8DLHA ( int VJON7q0dP , int bPFec2HbS3saTeb 
  ) {
}<= 
